# portfolio-fullstack-developer

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  resume_data_pack.md
LedgerFlow ⚠️/: .gitignore  ATOMIC_COUNTER_IMPLEMENTATION.md  CHANGELOG.md  Dockerfile  FORM_SUBMISSION_FIX.md  INTERVIEW_BRIEF.md  Makefile  PDF_GENERATION_FIX.md  PROJECT_STRUCTURE.md  README.md  VERIFICATION_ENGINE_TEST_RESULTS.md  alembic.ini  app.py  check_database_products.py  config.py  create_ultimate_demo.py  demo_config_system.py  docker-compose.yml  final_demo_complete.py  final_demo_summary.py  final_fixed_demo.py  final_invoice_generator.py  grid_perfect_generator.py  lighthouserc.js  pdf_generation_analysis.json  perfect_clean_final.py  perfect_clean_generator.py  production_invoice_generator.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  show_invoice_summary.py  ultimate_block_free.py  ultimate_perfect_generator.py  validation_report.json  verify_final_output.py
LedgerFlow ⚠️/.github/workflows/: ci.yml
LedgerFlow ⚠️/.kiro/specs/pdf-engine-replacement/: design.md  requirements.md
LedgerFlow ⚠️/.kiro/specs/system-hardening/: design.md  requirements.md  tasks.md
LedgerFlow ⚠️/alembic/: env.py
LedgerFlow ⚠️/alembic/versions/: 74de654889e9_001_add_invoice_constraints_and_.py  8a9c64eb4cdd_003_add_trace_id_generation_metadata_.py  8d4f722b136f_002_fix_composite_unique_constraint.py  f3098294bd28_002_migrate_boolean_toggles_to_realism_.py
LedgerFlow ⚠️/app/: __init__.py
LedgerFlow ⚠️/app/api/: config.py
LedgerFlow ⚠️/app/config/: simulation.yaml  verification_rules.yaml
LedgerFlow ⚠️/app/config/schemas/: simulation.json
LedgerFlow ⚠️/app/core/: __init__.py  access_control.py  auth_controller.py  certificate_manager.py  comparison_engine.py  config_manager.py  customer_name_generator.py  diagnostic_controller.py  diagnostics_logger.py  excel_importer.py  excel_template.py  exceptions.py  export_controller.py  export_manager.py  fix_engine.py  gst_packager.py  invoice_simulator.py  json_generator.py  master_simulation_engine.py  pdf_signer.py  pdf_template_engine.py  product_catalog.py  retry_handler.py  rules_config.py  security_manager.py  simulation_config_manager.py  timeflow_engine.py  verichain_engine.py  verification_engine.py
LedgerFlow ⚠️/app/core/tax_strategies/: __init__.py  base.py  factory.py  gst_strategy.py  no_tax_strategy.py  vat_strategy.py
LedgerFlow ⚠️/app/core/verification/: __init__.py  base.py  models.py
LedgerFlow ⚠️/app/data/: passcode.hash
LedgerFlow ⚠️/app/models/: __init__.py  base.py  customer.py  invoice.py  product.py  security.py  settings.py  template_type.py  user.py
LedgerFlow ⚠️/app/services/: __init__.py  excel_exporter.py  excel_importer.py  invoice_generator.py  pdf_exporter.py
LedgerFlow ⚠️/app/services/counter/: atomic_counter_service.py
LedgerFlow ⚠️/app/utils/: security.py
LedgerFlow ⚠️/archive/: pdf_engine_production.py  pdf_template_engine_simple.py
LedgerFlow ⚠️/collateral damage/LedgerFlow flet/: README.md  main.py  run_app.py  run_ledgerflow.bat
LedgerFlow ⚠️/collateral damage/LedgerFlow tauri /: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
LedgerFlow ⚠️/comparison_output/: comparison_report.json
LedgerFlow ⚠️/docs/: CHANGELOG.md  VAT_TAX_FIX.md
LedgerFlow ⚠️/examples/: tax_strategy_demo.py  verification_engine_usage.py
LedgerFlow ⚠️/instance/certificates/: key.key
LedgerFlow ⚠️/schemas/: bahrain_nbr_1.0.xsd  gst_irp_1.1.xsd
LedgerFlow ⚠️/templates/: base.html  dashboard.html  export.html  generate.html  header.html  home.html  import.html  index.html  login.html  manual.html  onboarding.html  settings.html  sidebar.html
LedgerFlow ⚠️/templates/pdf/: bahrain_vat.html  gst_einvoice.html  plain_cash.html
LedgerFlow ⚠️/tests/: conftest.py  quick_check.py
LedgerFlow ⚠️/tests/tax_strategies/: __init__.py
VeriDoc/: README.md  (+22 more)
(+543 files in other folders)
